# AdhanWidget

./: README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  adhanengine.cpp  main.cpp
app/src/main/cpp/prayer/: prayertimes.cpp  prayertimes.h
app/src/main/cpp/prayer/prayercalc/: prayercalc.cpp  prayercalc.h
app/src/main/cpp/prayertimes/: prayertimes.cpp  prayertimes.h
app/src/main/java/com/widgetfiles/: AdhanWidget.kt  MainActivity.kt  WidgetReciever.kt
app/src/main/java/com/widgetfiles/Native/: NativeEngine.kt
app/src/main/java/com/widgetfiles/alarm/: AlarmCalc.kt
app/src/main/java/com/widgetfiles/location/: LocationStore.kt
app/src/main/java/com/widgetfiles/prayer/: PrayerCalc.kt
app/src/main/java/com/widgetfiles/widget/: AdhanWidget.kt  PrayerDisplay.kt  WidgetReciever.kt  WidgetState.kt
app/src/main/java/com/widgetfiles/widget/data/: DataClasses.kt  PrayerDisplay.kt  PrayerTimes.kt
app/src/main/java/com/widgetfiles/widget/location/: LocCache.kt  LocRecieve.kt  Prefs.kt
app/src/main/java/com/widgetfiles/widget/update/: BootReceiver.kt  DayRecieve.kt  DayTick.kt  MinRecieve.kt  MinTick.kt  (+2 more)
app/src/main/res/drawable/: alarm.xml  cloud.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  moon.xml  sun.xml  sunrise.xml  sunset.xml  timer.xml  vibe_off.xml  vibe_on.xml
app/src/main/res/xml/: backup_rules.xml  my_app_widget_info.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
